--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,19 @@ a {
 	position: relative;
 }
 
+.donnyj__image-container {
+}
+
+.donnyj__archive-link {
+	margin: auto;
+	text-align: center;
+	color:#FAEBD7;
+	text-decoration: none;
+	font-size:.8rem;
+	display:block;
+	padding-top:.5rem;
+}
+
 .donnyj__counter {
 	position:relative;
 
@@ -37,6 +50,10 @@ a {
 	padding-top: 2rem;
 }
 
+.donnyj__date {
+
+}
+
 .twitter-tweet{
 	margin:auto;
 }
@@ -45,7 +62,6 @@ a {
 	max-width:500px;
 	box-sizing: border-box;
 	margin: auto;
-	padding: 1rem;
 	padding-bottom: 5rem;
 }
 
@@ -167,6 +183,14 @@ ul.share-buttons .sr-only {
 	.donnyj {
 		text-align: inherit;
 	}
+
+	.donnyj__image-container {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
 	.donnyj__content {
 		position: relative;
 		width: 50%;
@@ -190,11 +214,6 @@ ul.share-buttons .sr-only {
 	}
 
 	.donnyj__himself {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-
 		width:350px;
 		height:350px;
 	}
